# stsql_project

./: CMakeLists.txt  main.c
src/executor/: executor.c  executor.h
src/parser/: parser.c  parser.h
src/storage/: storage.c  storage.h
